--- a/Customer.html
+++ b/Customer.html
@@ -33,7 +33,7 @@
             <div class="hero">
                 <div class="content">
                     <h2>Welcome to </h2>
-                    <h1>Spark - Customers Page</h1>
+                    <h1>Customers Page</h1>
                     <h2>Here are the details of all available customers</h2>
                 </div>
             </div>
@@ -58,173 +58,162 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
                         <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>2</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>3</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>4</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>5</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
+                    <tr>
+                        <td>6</td>
+                        <td>Rahul Sharma</td>
+                        <td>UBIN2116589</td>
+                        <td>Saving</td>
+                        <td>Indian</td>
+                        <td>rahul@gmail.com</td>
+                        <td>10000</td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>7</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>8</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>9</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>10</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>11</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>12</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>13</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>14</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>15</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>16</td>
+                        <td>Rahul Sharma</td>
                         <td>UBIN2116589</td>
                         <td>Saving</td>
                         <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
+                        <td>rahul@gmail.com</td>
                         <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
-                        <td>UBIN2116589</td>
-                        <td>Saving</td>
-                        <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
-                        <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Sanjay Kumar Sah</td>
-                        <td>UBIN2116589</td>
-                        <td>Saving</td>
-                        <td>Indian</td>
-                        <td>sanjay8797421521@gmail.com</td>
-                        <td>10000</td>
-                        <td><button class="CustomerViewBtn">View</button></td>
+                        <td><button class="CustomerViewBtn" onclick="window.location='customerProfile.html'">View</button></td>
                     </tr>
                 </tbody>
                 
