--- a/CustomerProfile.html
+++ b/CustomerProfile.html
@@ -38,11 +38,11 @@
                     <img src="http://i.stack.imgur.com/rf8Wg.jpg" alt="">
                 </div>
                 <div class="profileImg">
-                    <img src="https://i0.wp.com/s3.zookti.com/nepalinames/blog/uploads/2021/05/Nepali-celebrities-who-changed-their-names.jpg?fit=720%2C720&quality=100&strip=all&ssl=1" alt="">
+                    <img src="https://scontent.famd7-1.fna.fbcdn.net/v/t39.30808-6/309903631_3233255680324940_572589910558226115_n.jpg?stp=c0.129.901.901a_dst-jpg_s851x315&_nc_cat=101&ccb=1-7&_nc_sid=da31f3&_nc_ohc=bCiG9jpK10IAX8t61E7&_nc_ht=scontent.famd7-1.fna&oh=00_AfDcNjhEj5h8P7fJkLIIzPLRwm5AsRzQtvg5QNOuSZoL4w&oe=63879470" alt="">
                     <div class="userDetails">
-                        <h2>Sanjay Kumar Sah</h2>
-                        <p>sanjay8797421521@gmail.com</p>
-                        <p>8797421521</p>
+                        <h2>Rahul Sharma</h2>
+                        <p>rahul@gmail.com</p>
+                        <p>8000676258</p>
                         <div class="accountDetails">
                             <div>
                                 <span><b>Account No.: </b> UM200AQ100020</span>
