--- a/TransactionHistory.html
+++ b/TransactionHistory.html
@@ -53,7 +53,7 @@
                         <td>1</td>
                         <td>tran20021802sba</td>
                         <td>11-09-2022</td>
-                        <td>Sanjay Kumar Sah</td>
+                        <td>Bibek Sah</td>
                         <td>Rahul Kumar Sah</td>
                         <td>UBIN2116589</td>
                         <td>UBIN2116590</td>
